third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/double-us.stderr
TOML parse error at line 1, column 15
  |
1 | double-us = 1__23
  |               ^
invalid integer
expected digit
